HomeWork6 - Ganres in Book changed to Set - refacoring tests JpaBookRepositoryTest